--- a/ethereum/5. ERC20.md
+++ b/ethereum/5. ERC20.md
@@ -319,17 +319,6 @@ module.exports = buildModule("JPYcoin", (m) => {
 ```bash
 npx hardhat ignition deploy ignition/modules/JPYcoin.js --network localhost
 
-=>
-Deploying [ JPYcoin ]
-
-Batch #1
-  Executed JPYcoin#JPYcoin
-
-[ JPYcoin ] successfully deployed 🚀
-
-Deployed Addresses
-
-JPYcoin#JPYcoin - 0x5FbDB2315678afecb367f032d93F642f64180aa3
 ```
 
 * ログの確認
@@ -337,9 +326,10 @@ JPYcoin#JPYcoin - 0x5FbDB2315678afecb367f032d93F642f64180aa3
 コントラクトアドレスを確認する
 
 ```js
-  Block: 0xc4de5fb0b9eb04e006170373dd7e400a9f4390d0953bfa3e7dab7cd76f715adf
-    Base fee: 31060570
-    Transaction:           0x282402d1d277ae6f84eec40e4969079009ebd534653bf040b23944659ed13723
+Mined block #2
+  Block: 0x4a2f1a0e507d9644c1820f2f2e22ae23b6d2996551728a3c7786a83e9770b0b1
+    Base fee: 765625000
+    Transaction:           0x41f22e62a47994606ab9464e9b3800c54ba29fbf0ba5c6e28aaa6eed7ad52c7b
       Contract deployment: JPYcoin
       Contract address:    0x5fbdb2315678afecb367f032d93f642f64180aa3
       From:                0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266
@@ -358,13 +348,11 @@ npx hardhat console --network localhost
 
 ```js
 > const JPYcoin = "0x5fbdb2315678afecb367f032d93f642f64180aa3"
-
 > const JPYcoinFactory = await ethers.getContractFactory("JPYcoin")
-
 // 当該コントラクトアドレスのコントラクトに接続する
 > const JPQ = await JPYcoinFactory.attach(JPYcoin)
 
-// EOAのアドレス
+// テスト用アカウント
 > const [owner, addr1, addr2] = await ethers.getSigners();
 
 // トークンの総供給量
@@ -402,11 +390,6 @@ npx hardhat console --network localhost
 ```js
 > await JPQ.approve(addr1,1000)
 
-ContractTransactionResponse {
-  provider: HardhatEthersProvider {
-
-...
-}
 ```
 
 * addr1 に承認された owner のトークンの引き出し可能金額
@@ -421,11 +404,6 @@ ContractTransactionResponse {
 ```js
 > await JPQ.transferFrom(addr1,addr2,100)
 
-ContractTransactionResponse {
-  provider: HardhatEthersProvider {
-
-...
-}
 ```
 
 ## メタマスク
@@ -443,8 +421,10 @@ ContractTransactionResponse {
 
 ## Payable: Eth で支払い可能なコントラクトの作成
 
-1. コントラクトが Eth を受取可能にする
+1. コントラクトが ETH を受取可能にする（payable修飾子）
 2. コントラクトが所有する Eth を引き出し可能にする
+3. コントラクトのpayable修飾子関数にETHを送金する
+4. コントラクトの保有ETHを引き出してオーナーに送金する
  
 ### 作成
 
@@ -477,12 +457,17 @@ contract EthWallet {
         // 受け取ったETHは自動的にコントラクトの残高に加算されます
     }
 
+    // コントラクトへ ETHを預金する
+    function deposit() public payable {
+    }
+
     // 所有者のみがコントラクトのETHを引き出せるようにする関数
     function withdraw(uint256 amount) public {
         require(msg.sender == owner, "Only owner can withdraw");
         require(amount <= address(this).balance, "Insufficient balance");
 
         // コントラクトから指定した量のETHを所有者に転送
+        // payable 関数：
         payable(owner).transfer(amount);
     }
 
@@ -491,6 +476,19 @@ contract EthWallet {
         return address(this).balance;
     }
 }
+```
+
+### payable修飾子の関数への etheres.js による送金
+
+* etheres.js によるコントラクトの関数呼び出しの引数にオプションで送金金額を指定できる
+
+例
+```js
+// 送金するETHをwai に単位変換する
+> const amount = ethers.parseUnits("0.1", 18); 
+// 送金金額のオプション化
+> const options = { value: amount };
+> EthWallet
 ```
 
 
@@ -532,53 +530,88 @@ EthWallet#EthWallet - 0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512
 コントラクトアドレスを確認する
 
 ```js
-Mined block #4325
-  Block: 0x588516f8eb933be9039f0e72b9f12b9aa5d722626d39f35231a1c3dceae58a01
-    Base fee: 7
-    Transaction:           0xf448d80102f4a75b6dad6cb0e7a3527f4d1f99f3196c1badbe93b8330ff198cb
+Mined block #1
+  Block: 0x5fa6ea8f00f6a259c9abc4cf13c54590e3dc8b69a8b57ac6ca90a9ceff2fc2cd
+    Base fee: 875000000
+    Transaction:           0x25c5989fe41a0cee41a35b49700339a287da041490a29af6514157572de83fd9
       Contract deployment: EthWallet
-      Contract address:    0xe7f1725e7734ce288f8367e1bb143e90bb3f0512
+      Contract address:    0x5fbdb2315678afecb367f032d93f642f64180aa3
       From:                0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266
       Value:               0 ETH
-      Gas used:            308401 of 308401
+      Gas used:            313341 of 313341
 ```
 
-### メタマスクで EthWallet へ Eth を送金
-
-* メタマスク（ローカルノードに接続）のアカウントの残高を確認
-* EthWallet のコントラクトアドレスを宛先にして 1 Eth 程度送金する
-* 「送金」後「確認」ボタンをクリックして完了を待つ
 
 ### コンソールからの操作
 
+* コントラクトへの接続
+
 ```js
-> const EthWallet = "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512"
+> const EthWallet = "0x5fbdb2315678afecb367f032d93f642f64180aa3"
 undefined
 > const EthWalletFactory = await ethers.getContractFactory("EthWallet")
 undefined
 > const EW =  await EthWalletFactory.attach(EthWallet)
 undefined
+```
 
+* テスト用アカウント
+
+```js
+> const [owner, addr1, addr2] = await ethers.getSigners();
+```
+
+* sendTransaction メソッドを使った ETH の送金
+
+```js
+// EthWallet へ ETH を送金する (10000000 wei)
+> await owner.sendTransaction({to: EthWallet, value: 10000000})
+
+=>
+TransactionResponse {
+  provider: HardhatEthersProvider {
+
+...
+}
+```
+
+* getBalance 関数
+
+```js
 // EthWallet コントラクトの保有残高を表示する
 > await EW.getBalance()
-1000000000000000000n
+10000000n
 
-> const [owner, addr1, addr2] = await ethers.getSigners();
 
 // コントラクトの所持金を引き出す
-> await EW.withdraw(100)
+> await EW.withdraw(100000)
 
+=>
 ContractTransactionResponse {
   provider: HardhatEthersProvider {
-    _hardhatProvider: LazyInitializationProviderAdapter {
 
 ...
 }
 
 > await EW.getBalance()
-999999999999999900n
+9900000n
 ```
 
+* deposit 関数（payable）を利用したETHの送金
+
+```js
+> await EW.deposit({value: 30000});
+
+=>
+ContractTransactionResponse {
+  provider: HardhatEthersProvider {
+
+...
+ }
+
+> await EW.getBalance()
+9930000n
+```
 
 ## Faucet : ERC20トークンを Eth で購入するコントラクトの作成
 
@@ -626,6 +659,7 @@ contract JPYFaucet {
     // コントラクトにETHを送信するための関数
     // この ETH はトークン購入の代金になるので，ETHを受領すると購入者にJPYトークンを代理送金します
     function buyTokens() public payable {
+        // msg.value     呼び出しトランザクションで送金された ETH の金額（wei単位）
         require(msg.value > 0, "ETH must be greater than 0");
         // 購入トークン量の計算
         uint256 tokenAmount = msg.value * rate;
@@ -634,7 +668,7 @@ contract JPYFaucet {
         // 売り手から購入者へのトークン送信
         require(token.transferFrom(owner, msg.sender, tokenAmount), "Token transfer failed");
     }
-    // 売り手がETHを引き出すための関数
+    // 売り手(所有者)がETHを引き出すための関数
     function withdrawETH() public {
         require(msg.sender == owner, "Only owner can withdraw");
         payable(owner).transfer(address(this).balance);
@@ -689,4 +723,50 @@ Mined block #50
       From:                0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266
       Value:               0 ETH
       Gas used:            597738 of 597738
+```
+
+### コンソールからの操作
+
+* ERC20コントラクトとトークン購入コントラクトのインスタンスとの接続
+
+```js
+> const JPYcoin = "0x5fbdb2315678afecb367f032d93f642f64180aa3"
+> const JPYcoinFactory = await ethers.getContractFactory("JPYcoin")
+> const JPQ = await JPYcoinFactory.attach(JPYcoin)
+
+> const JPYFaucet = "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512"
+> const JPYFaucetFactory = await ethers.getContractFactory("JPYFaucet")
+> const JPYF = await JPYFaucetFactory.attach(JPYFaucet)
+```
+
+* ERC20コントラクトからトークン購入コントラクトに対して代理送金を許可する（100000トークンまで）
+
+```js
+> await JPQ.approve(JPYFaucet,100000);
+
+=>
+ContractTransactionResponse {
+  provider: HardhatEthersProvider {
+    _hardhatProvider: LazyInitializationProviderAdapter {
+...
+}
+```
+
+* テスト用アドレス
+
+```js
+> const [owner, addr1, addr2] = await ethers.getSigners();
+```
+
+* トークン購入 (ETH を 10000 wei) 送金
+
+```js
+> await JPYF.buyTokens({value: 10000})
+
+=>
+ContractTransactionResponse {
+  provider: HardhatEthersProvider {
+
+...
+}
 ```
