--- a/ethereum/1. Hardhat.md
+++ b/ethereum/1. Hardhat.md
@@ -805,3 +805,190 @@ Mined block #42
       Value:               0 ETH
       Gas used:            620478 of 620478
 ```
+
+
+## Eth で支払い可能なコントラクトの作成 
+
+1. コントラクトが ETH を受取可能にする（payable修飾子）
+2. コントラクトが所有する Eth を引き出し可能にする
+3. コントラクトのpayable修飾子関数にETHを送金する
+4. コントラクトの保有ETHを引き出してオーナーに送金する
+ 
+### コントラクトのコードの作成
+
+* プロジェクトルートに移動
+
+```bash
+nano contracts/EthWallet.sol
+```
+
+```js
+// SPDX-License-Identifier: MIT
+pragma solidity ^0.8.0;
+
+contract EthWallet {
+    address public owner;
+
+    constructor() {
+      // コントラクトをデプロイしたアドレスを所有者として設定
+        owner = msg.sender; 
+    }
+
+    // コントラクトにETHを送信するための関数
+    receive() external payable {
+        // 受け取ったETHは自動的にコントラクトの残高に加算されます
+    }
+
+    // コントラクトへ ETHを預金する deposit はpayable 関数
+    function deposit() public payable {
+    }
+
+    // 所有者のみがコントラクトのETHを引き出せるようにする関数
+    function withdraw(uint256 amount) public {
+        require(msg.sender == owner, "引き出せるのは所有者だけです");
+        require(amount <= address(this).balance, "残高不足");
+        // コントラクトが所有する ETH から指定した量のETHを所有者に転送
+        owner.transfer(amount);
+    }
+
+    // コントラクトの残高を確認する関数
+    function getBalance() public view returns (uint256) {
+        return address(this).balance;
+    }
+}
+```
+
+### payable修飾子の関数への etheres.js による送金
+
+* etheres.js によるコントラクトの関数呼び出しの引数にオプションで送金金額を指定できる
+
+例
+```js
+// 送金するETHをwai に単位変換する
+> const amount = ethers.parseUnits("0.1", 18); 
+// 送金金額のオプション化
+> const options = { value: amount };
+> EthWallet
+```
+
+
+### hardhat ignition によるデプロイモジュールの作成
+
+```bash
+nano ignition/modules/EthWallet.js
+```
+
+
+```js
+const { buildModule } = require("@nomicfoundation/hardhat-ignition/modules");
+
+module.exports = buildModule("EthWallet", (m) => {
+  const contract = m.contract("EthWallet", []);
+  return { contract };
+});
+```
+
+### ローカルノードへのデプロイ
+
+```bash
+npx hardhat ignition deploy ignition/modules/EthWallet.js --network localhost
+
+=>
+Batch #1
+  Executed EthWallet#EthWallet
+
+[ EthWallet ] successfully deployed 🚀
+
+Deployed Addresses
+
+JPYcoin#JPYcoin - 0x5FbDB2315678afecb367f032d93F642f64180aa3
+EthWallet#EthWallet - 0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512
+```
+
+* ログの確認
+
+コントラクトアドレスを確認する
+
+```js
+Mined block #1
+  Block: 0x5fa6ea8f00f6a259c9abc4cf13c54590e3dc8b69a8b57ac6ca90a9ceff2fc2cd
+    Base fee: 875000000
+    Transaction:           0x25c5989fe41a0cee41a35b49700339a287da041490a29af6514157572de83fd9
+      Contract deployment: EthWallet
+      Contract address:    0x5fbdb2315678afecb367f032d93f642f64180aa3
+      From:                0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266
+      Value:               0 ETH
+      Gas used:            313341 of 313341
+```
+
+
+### コンソールからの操作
+
+* コントラクトへの接続
+
+```js
+> const EthWallet = "0x5fbdb2315678afecb367f032d93f642f64180aa3"
+undefined
+> const EthWalletFactory = await ethers.getContractFactory("EthWallet")
+undefined
+> const EW =  await EthWalletFactory.attach(EthWallet)
+undefined
+```
+
+* テスト用アカウント
+
+```js
+> const [owner, addr1, addr2] = await ethers.getSigners();
+```
+
+* sendTransaction メソッドを使った ETH の送金
+
+```js
+// EthWallet へ ETH を送金する (10000000 wei)
+> await owner.sendTransaction({to: EthWallet, value: 10000000})
+
+=>
+TransactionResponse {
+  provider: HardhatEthersProvider {
+
+...
+}
+```
+
+* getBalance 関数
+
+```js
+// EthWallet コントラクトの保有残高を表示する
+> await EW.getBalance()
+10000000n
+
+
+// コントラクトの所持金を引き出す
+> await EW.withdraw(100000)
+
+=>
+ContractTransactionResponse {
+  provider: HardhatEthersProvider {
+
+...
+}
+
+> await EW.getBalance()
+9900000n
+```
+
+* deposit 関数（payable）を利用したETHの送金
+
+```js
+> await EW.deposit({value: 30000});
+
+=>
+ContractTransactionResponse {
+  provider: HardhatEthersProvider {
+
+...
+ }
+
+> await EW.getBalance()
+9930000n
+```
