--- a/ethereum/5. ERC20.md
+++ b/ethereum/5. ERC20.md
@@ -419,200 +419,6 @@ npx hardhat console --network localhost
 * コントラクトアドレスを入力
 * トークンボタンをクリック
 
-## Payable: Eth で支払い可能なコントラクトの作成
-
-1. コントラクトが ETH を受取可能にする（payable修飾子）
-2. コントラクトが所有する Eth を引き出し可能にする
-3. コントラクトのpayable修飾子関数にETHを送金する
-4. コントラクトの保有ETHを引き出してオーナーに送金する
- 
-### 作成
-
-* 新しいターミナルを開いて以下を実行
-* プロジェクトルートに移動
-
-```bash
-cd ~/hardhat/erc20
-```
-
-### コントラクトのコード
-
-```bash
-nano contracts/EthWallet.sol
-```
-
-```js
-// SPDX-License-Identifier: MIT
-pragma solidity ^0.8.0;
-
-contract EthWallet {
-    address public owner;
-
-    constructor() {
-        owner = msg.sender; // コントラクトをデプロイしたアドレスを所有者として設定
-    }
-
-    // コントラクトにETHを送信するための関数
-    receive() external payable {
-        // 受け取ったETHは自動的にコントラクトの残高に加算されます
-    }
-
-    // コントラクトへ ETHを預金する
-    function deposit() public payable {
-    }
-
-    // 所有者のみがコントラクトのETHを引き出せるようにする関数
-    function withdraw(uint256 amount) public {
-        require(msg.sender == owner, "Only owner can withdraw");
-        require(amount <= address(this).balance, "Insufficient balance");
-
-        // コントラクトから指定した量のETHを所有者に転送
-        // payable 関数：
-        payable(owner).transfer(amount);
-    }
-
-    // コントラクトの残高を確認する関数
-    function getBalance() public view returns (uint256) {
-        return address(this).balance;
-    }
-}
-```
-
-### payable修飾子の関数への etheres.js による送金
-
-* etheres.js によるコントラクトの関数呼び出しの引数にオプションで送金金額を指定できる
-
-例
-```js
-// 送金するETHをwai に単位変換する
-> const amount = ethers.parseUnits("0.1", 18); 
-// 送金金額のオプション化
-> const options = { value: amount };
-> EthWallet
-```
-
-
-### hardhat ignition によるデプロイモジュールの作成
-
-```bash
-nano ignition/modules/EthWallet.js
-```
-
-
-```js
-const { buildModule } = require("@nomicfoundation/hardhat-ignition/modules");
-
-module.exports = buildModule("EthWallet", (m) => {
-  const contract = m.contract("EthWallet", []);
-  return { contract };
-});
-```
-
-### ローカルノードへのデプロイ
-
-```bash
-npx hardhat ignition deploy ignition/modules/EthWallet.js --network localhost
-
-=>
-Batch #1
-  Executed EthWallet#EthWallet
-
-[ EthWallet ] successfully deployed 🚀
-
-Deployed Addresses
-
-JPYcoin#JPYcoin - 0x5FbDB2315678afecb367f032d93F642f64180aa3
-EthWallet#EthWallet - 0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512
-```
-
-* ログの確認
-
-コントラクトアドレスを確認する
-
-```js
-Mined block #1
-  Block: 0x5fa6ea8f00f6a259c9abc4cf13c54590e3dc8b69a8b57ac6ca90a9ceff2fc2cd
-    Base fee: 875000000
-    Transaction:           0x25c5989fe41a0cee41a35b49700339a287da041490a29af6514157572de83fd9
-      Contract deployment: EthWallet
-      Contract address:    0x5fbdb2315678afecb367f032d93f642f64180aa3
-      From:                0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266
-      Value:               0 ETH
-      Gas used:            313341 of 313341
-```
-
-
-### コンソールからの操作
-
-* コントラクトへの接続
-
-```js
-> const EthWallet = "0x5fbdb2315678afecb367f032d93f642f64180aa3"
-undefined
-> const EthWalletFactory = await ethers.getContractFactory("EthWallet")
-undefined
-> const EW =  await EthWalletFactory.attach(EthWallet)
-undefined
-```
-
-* テスト用アカウント
-
-```js
-> const [owner, addr1, addr2] = await ethers.getSigners();
-```
-
-* sendTransaction メソッドを使った ETH の送金
-
-```js
-// EthWallet へ ETH を送金する (10000000 wei)
-> await owner.sendTransaction({to: EthWallet, value: 10000000})
-
-=>
-TransactionResponse {
-  provider: HardhatEthersProvider {
-
-...
-}
-```
-
-* getBalance 関数
-
-```js
-// EthWallet コントラクトの保有残高を表示する
-> await EW.getBalance()
-10000000n
-
-
-// コントラクトの所持金を引き出す
-> await EW.withdraw(100000)
-
-=>
-ContractTransactionResponse {
-  provider: HardhatEthersProvider {
-
-...
-}
-
-> await EW.getBalance()
-9900000n
-```
-
-* deposit 関数（payable）を利用したETHの送金
-
-```js
-> await EW.deposit({value: 30000});
-
-=>
-ContractTransactionResponse {
-  provider: HardhatEthersProvider {
-
-...
- }
-
-> await EW.getBalance()
-9930000n
-```
-
 ## Faucet : ERC20トークンを Eth で購入するコントラクトの作成
 
 ###  Eth でトークンを販売するコントラクトの作成手順
@@ -644,9 +450,10 @@ pragma solidity ^0.8.0;
 
 // OpenZeppelinのライブラリをインポートする
 import "@openzeppelin/contracts/token/ERC20/ERC20.sol";
+import "./JPYcoin.sol";
 
 contract JPYFaucet {
-    JPYcoin private token;
+    JPYcoin public token;
     address public owner;
     uint256 public rate; // 1ETH あたりのトークン
 
@@ -702,7 +509,7 @@ const { buildModule } = require("@nomicfoundation/hardhat-ignition/modules");
 const JPYcoin = "0x5fbdb2315678afecb367f032d93f642f64180aa3"
 
 module.exports = buildModule("JPYFaucet", (m) => {
-  const JPYFaucet = m.contract("JPYFaucet", [JPYcoin, 1000]);
+  const JPYFaucet = m.contract("JPYFaucet", [JPYcoin, 20]);
   return { JPYFaucet };
 });
 
@@ -714,15 +521,15 @@ module.exports = buildModule("JPYFaucet", (m) => {
 npx hardhat ignition deploy ignition/modules/JPYFaucet.js --network localhost
 
 =>
-Mined block #50
-  Block: 0x277ca31e023da108c95774d21e7bff0a858eb6291e2fa3b0884af62097ae0dab
-    Base fee: 1271687
-    Transaction:           0x0c072e73b1668c603f58804c4c922bfbc96b1aa04ecb83edf9dbbfc433f14b35
-      Contract deployment: <UnrecognizedContract>
-      Contract address:    0xe7f1725e7734ce288f8367e1bb143e90bb3f0512
-      From:                0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266
-      Value:               0 ETH
-      Gas used:            597738 of 597738
+Batch #1
+  Executed JPYFaucet#JPYFaucet
+
+[ JPYFaucet ] successfully deployed 🚀
+
+Deployed Addresses
+
+JPYcoin#JPYcoin - 0x5FbDB2315678afecb367f032d93F642f64180aa3
+JPYFaucet#JPYFaucet - 0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9
 ```
 
 ### コンソールからの操作
@@ -730,26 +537,20 @@ Mined block #50
 * ERC20コントラクトとトークン購入コントラクトのインスタンスとの接続
 
 ```js
-> const JPYcoin = "0x5fbdb2315678afecb367f032d93f642f64180aa3"
+> const JPYcoin = "0x5FbDB2315678afecb367f032d93F642f64180aa3"
 > const JPYcoinFactory = await ethers.getContractFactory("JPYcoin")
 > const JPQ = await JPYcoinFactory.attach(JPYcoin)
 
-> const JPYFaucet = "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512"
+> const JPYFaucet = "0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9"
 > const JPYFaucetFactory = await ethers.getContractFactory("JPYFaucet")
 > const JPYF = await JPYFaucetFactory.attach(JPYFaucet)
 ```
 
-* ERC20コントラクトからトークン購入コントラクトに対して代理送金を許可する（100000トークンまで）
+* ERC20コントラクトからトークン購入コントラクトに対して代理送金を許可する（1000000000トークンまで）
 
 ```js
-> await JPQ.approve(JPYFaucet,100000);
+> await JPQ.approve(JPYFaucet,1000000000);
 
-=>
-ContractTransactionResponse {
-  provider: HardhatEthersProvider {
-    _hardhatProvider: LazyInitializationProviderAdapter {
-...
-}
 ```
 
 * テスト用アドレス
@@ -758,15 +559,37 @@ ContractTransactionResponse {
 > const [owner, addr1, addr2] = await ethers.getSigners();
 ```
 
-* トークン購入 (ETH を 10000 wei) 送金
+* トークン購入 (ETH を 20000 wei) 送金
 
 ```js
-> await JPYF.buyTokens({value: 10000})
+> await JPYF.buyTokens({value: 20000})
 
-=>
-ContractTransactionResponse {
-  provider: HardhatEthersProvider {
+```
 
-...
-}
+* トークン保有量の確認
+
+```js
+> await JPQ.balanceOf(addr1.address)
+8000000n
+> await JPQ.balanceOf(owner.address)
+99992000000n
+
+```
+
+
+* トークン購入 (ETH を 50000 wei) 送金
+
+```js
+> await JPYF.buyTokens({value: 50000})
+
+```
+
+* トークン保有量の確認
+
+```js
+> await JPQ.balanceOf(addr1.address)
+8000000n
+> await JPQ.balanceOf(owner.address)
+99992000000n
+
 ```
