--- a/bitcoin/2.bitcoin-core-details-1.md
+++ b/bitcoin/2.bitcoin-core-details-1.md
@@ -1,6 +1,7 @@
 # 2. bitcoin core の詳細
 
-2024/06/09  更新 Shigeichiro Yamasaki
+2024/11/09
+  更新 Shigeichiro Yamasaki
 
 * [メーリングリスト bitcoin-dev](https://lists.linuxfoundation.org/mailman/listinfo/bitcoin-dev)
 * [Slack: https://bitcoincore.slack.com/](https://bitcoincore.slack.com/)
@@ -17,11 +18,11 @@ ubuntu での実施を前提にします．
 1.  5種類のoutput (P2PKH, P2SH, P2WPKH, P2WSH, P2TR)を持つトランザクション TX1 をブロードキャストする
 
 ```
-(UTXOの資金)--> TX1 -+-->0.0002BTC VOUT:1 -->TX3(P2PKH) --> 0.00018BTC
-                    +-->0.0002BTC VOUT:2 -->TX4(P2SH)  --> 0.00018BTC
-                    +-->0.0002BTC VOUT:3 -->TX5(P2WPKH)--> 0.00018BTC
-                    +-->0.0002BTC VOUT:4 -->TX6(P2WSH) --> 0.00018BTC
-                    +-->0.0002BTC VOUT:5 -->TX7(P2TR)  --> 0.00018BTC
+(UTXOの資金)--> TX1 -+-->0.0002 BTC VOUT:1 -->TX3(P2PKH) --> 0.00018 BTC
+                    +-->0.0002 BTC VOUT:2 -->TX4(P2SH)  --> 0.00018 BTC
+                    +-->0.0002 BTC VOUT:3 -->TX5(P2WPKH)--> 0.00018 BTC
+                    +-->0.0002 BTC VOUT:4 -->TX6(P2WSH) --> 0.00018 BTC
+                    +-->0.0002 BTC VOUT:5 -->TX7(P2TR)  --> 0.00018 BTC
                     +-->おつり
 ```
 2. 5種類タイプの異なるUTXOをinputとするトランザクション (TX3 ~ TX7) を作成するしてブロードキャストする
