--- a/ethereum/3. ERC20.md
+++ b/ethereum/3. ERC20.md
@@ -1,8 +1,9 @@
-# 5. ERC20 トークンの作成と利用
+# 3. ERC20 トークンの作成と利用
 
 OpenZeppelin のライブラリを利用した ERC20トークンを処理するコントラクト
 
-最終更新 2024/11/05  Shigeichiro Yamasaki
+最終更新 2024/11/11
+Shigeichiro Yamasaki
 
 ## ERC-20の仕様
 
