--- a/ethereum/2. console.md
+++ b/ethereum/2. console.md
@@ -1,6 +1,6 @@
 # 2. Hardhat による Ethereum ブロックチェーンのコンソール操作
 
-最終更新 2024/10/30 Shigeichiro Yamasaki
+最終更新 2024/11/11 Shigeichiro Yamasaki
 
 ## 前提条件
 
@@ -273,6 +273,7 @@ Interface {
 ```js
 
 > ethers
+
 {
   version: '6.13.4',
   decodeBytes32String: [Function: decodeBytes32String],
@@ -323,7 +324,7 @@ javaSCript の await で非同期に受け取った内容出力すればよい
 undefined
 ```
 
-上記の出力結果の配列のインデックス1 を取り出す場合
+* 上記の出力結果の配列のインデックス1 を取り出す場合
 
 ```js
 > (await ethers.getSigners())[1]
