--- a/ethereum/3. ERC20.md
+++ b/ethereum/3. ERC20.md
@@ -75,23 +75,6 @@ Shigeichiro Yamasaki
 [https://docs.openzeppelin.com/contracts/4.x/erc20](https://docs.openzeppelin.com/contracts/4.x/erc20)
 
 
-## hardhat プロジェクトの初期化
-
-### OSのアップデート
-
-* ubuntu
-
-```bash
-sudo apt update
-sudo apt upgrade -y
-```
-* MacOSX
-
-```bash
-brew update
-brew upgrade
-```
-
 ## hardhat プロジェクトの初期構成
 
 * ERC20 用プロジェクト・ディレクトリ
@@ -309,6 +292,7 @@ nano ignition/modules/JPYcoin.js
 const { buildModule } = require("@nomicfoundation/hardhat-ignition/modules");
 
 module.exports = buildModule("JPYcoin", (m) => {
+  // コンストラクタの引数として初期のトーク供給量を 10の11乗とする
   const contract = m.contract("JPYcoin", [10**11]);
   return { contract };
 });
@@ -348,10 +332,10 @@ npx hardhat console --network localhost
 ### ERC20 コントラクトへの操作
 
 ```js
-> const JPYcoin = "0x5fbdb2315678afecb367f032d93f642f64180aa3"
+> const JPYcoinAddr = "0x5fbdb2315678afecb367f032d93f642f64180aa3"
 > const JPYcoinFactory = await ethers.getContractFactory("JPYcoin")
 // 当該コントラクトアドレスのコントラクトに接続する
-> const JPQ = await JPYcoinFactory.attach(JPYcoin)
+> const JPQ = await JPYcoinFactory.attach(JPYcoinAddr)
 
 // テスト用アカウント
 > const [owner, addr1, addr2] = await ethers.getSigners();
@@ -457,13 +441,16 @@ contract JPYFaucet {
     JPYcoin public token;
     address public owner;
     uint256 public rate; // 1ETH あたりのトークン
-
-    constructor(JPYcoin _token, uint256 _rate) {
-        token = _token;
+    // 初期化時にのデプロイ済のERC20コントラクトと ETH とトークンの交換比率を設定する
+    constructor(uint256 _rate) {
         rate = _rate;
         owner = msg.sender; // コントラクトをデプロイしたアドレスを所有者として設定
     }
 
+    // トークンコントラクトのインスタンスをセットする
+    function setToken(JPYcoin _token) public {
+        token = _token;
+    }
     // コントラクトにETHを送信するための関数
     // この ETH はトークン購入の代金になるので，ETHを受領すると購入者にJPYトークンを代理送金します
     function buyTokens() public payable {
@@ -507,10 +494,9 @@ nano ignition/modules/JPYFaucet.js
 ```js
 const { buildModule } = require("@nomicfoundation/hardhat-ignition/modules");
 
-const JPYcoin = "0x5fbdb2315678afecb367f032d93f642f64180aa3"
-
 module.exports = buildModule("JPYFaucet", (m) => {
-  const JPYFaucet = m.contract("JPYFaucet", [JPYcoin, 20]);
+  // ETHとトークンの交換比率は 20
+  const JPYFaucet = m.contract("JPYFaucet", [20]);
   return { JPYFaucet };
 });
 
@@ -530,21 +516,25 @@ Batch #1
 Deployed Addresses
 
 JPYcoin#JPYcoin - 0x5FbDB2315678afecb367f032d93F642f64180aa3
-JPYFaucet#JPYFaucet - 0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9
+JPYFaucet#JPYFaucet - 0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512
 ```
 
 ### コンソールからの操作
 
 * ERC20コントラクトとトークン購入コントラクトのインスタンスとの接続
 
-```js
-> const JPYcoin = "0x5FbDB2315678afecb367f032d93F642f64180aa3"
-> const JPYcoinFactory = await ethers.getContractFactory("JPYcoin")
-> const JPQ = await JPYcoinFactory.attach(JPYcoin)
+```bash
+npx hardhat console
+```
 
-> const JPYFaucet = "0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9"
+```js
+> const JPYcoinAddr = "0x5FbDB2315678afecb367f032d93F642f64180aa3"
+> const JPYcoinFactory = await ethers.getContractFactory("JPYcoin")
+> const JPQ = await JPYcoinFactory.attach(JPYcoinAddr)
+
+> const JPYFaucetAddr = "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512"
 > const JPYFaucetFactory = await ethers.getContractFactory("JPYFaucet")
-> const JPYF = await JPYFaucetFactory.attach(JPYFaucet)
+> const JPYF = await JPYFaucetFactory.attach(JPYFaucetAddr)
 ```
 
 * ERC20コントラクトからトークン購入コントラクトに対して代理送金を許可する（1000000000トークンまで）
