--- a/bitcoin/2.bitcoin-core-details-1.md
+++ b/bitcoin/2.bitcoin-core-details-1.md
@@ -1,6 +1,6 @@
 # 2. bitcoin core の詳細
 
-2024/11/15
+2024/11/16
   更新 Shigeichiro Yamasaki
 
 * [BIP](https://github.com/bitcoin/bips)
@@ -277,11 +277,10 @@ mhAg6CF3VSE1htcQV2ShxRTsMgb2VCvqU4
 その典型例がマルチシグ（多重署名）用アドレスです。
 
 #### マルチシグ用公開鍵のリストの作成
-
  
 アドレスの生成には、n人の署名者たちの公開鍵が必要です。
 
-ここでは P2PK と同様の方法で３人の公開鍵を生成し，シェル変数 PUBKEY1, PUBKEY2, PUBKEY3 に代入します．
+ここでは openssl を利用して ３人の秘密鍵と公開鍵を生成します
 
 ```bash
 SIGNER1=`bitcoin-core.cli getnewaddress signer1`
