--- a/bitcoin/3.bitcoin-core-details-2.md
+++ b/bitcoin/3.bitcoin-core-details-2.md
@@ -1,13 +1,14 @@
 # 3. bitcoin core の詳細-2
 
-2024/06/17  更新 Shigeichiro Yamasaki
+2024/11/16
+Shigeichiro Yamasaki
 
 ## 各種トランザクションの構成を一連の流れで演習します
 
 ubuntu での実施を前提にします．
 
 
-1.  3 種類のoutput (P2PKH,  P2WPKH,  P2TR)を持つトランザクション TX1 をブロードキャストする
+1.  3 種類のoutput (P2PKH,  P2WPKH,  P2TR)を持つトランザクション TX1 をブロードキャストされている
 
 P2SH, P2WSH の送金にはプログラミングが必要です
 
@@ -37,12 +38,12 @@ P2SH, P2WSH の送金にはプログラミングが必要です
 
 以下は例です．
 
-自分のバックアップファイルから復元してください
+自分のバックアップファイルから以下のようなシェル変数を復元してください
 
 ```bash
 TARO="tb1qd3la0q64a5qt5l4aka00jq495ry7d7gws84kf8"
 BOB="tb1qctzkewtgryz548ajasuf526nfmdu5qum3alec6"
-BP2PK_ADDROB="0226e09f8d39f0329ffc996076d5b8cdab14e4e1f71daf9cdeb2fbf31c2e0b70fa"
+P2PK_ADDR="0226e09f8d39f0329ffc996076d5b8cdab14e4e1f71daf9cdeb2fbf31c2e0b70fa"
 P2PKH_ADDR="n3ExacD1dFiMLL37u4j5YsR1SBcqi7qCFA"
 SIGNER1="tb1qvd9dl3hvtap455l74f4l2fhw0sflwjduljz33n"
 SIGNER2="tb1qwyxcedp2rjt4uxpvs6nrp62la8rsx2rk7u5gfl"
@@ -217,90 +218,81 @@ UTXOS=`bitcoin-core.cli listunspent`
 
 ### UTXOを一つずつ確認
 
-各UTXOの "desc" の値を確認
-各UTXOの "address" の値を確認
-
-pkh(), wpkh(), tr() のUTXOを見つける
+* 各UTXOの "desc" の値を確認
+* descriptor 関数が pkh(), wpkh(), tr() のUTXOを見つける
+* 見つかったらそのUTXOをシェル変数に代入する
 
 ```bash
 echo $UTXOS|jq '.[0].desc'
 =>
 "pkh([c4317781/44h/1h/0h/0/2]02f892126df2459ca403ee963b92e3fe25355780d4192be8569e1a544553068fcf)#7udsu0qd"
-
+# pkh() 発見！ 
+# アドレスを確認
 echo $UTXOS|jq '.[0].address'
 =>
-"n3ExacD1dFiMLL37u4j5YsR1SBcqi7qCFA"
-
-echo $UTXOS|jq '.[1].desc'
-=>
-"wpkh([c4317781/84h/1h/0h/0/31]035701c8785279c4ca4eb9e792428404e609b2f6a07f2b7e13b781c2d02c752def)#glp2qarz"
-
-echo $UTXOS|jq '.[1].address'
-=>
-"tb1qd3la0q64a5qt5l4aka00jq495ry7d7gws84kf8"
-
-...
-
-echo $UTXOS|jq '.[9].desc'
-=>
-"tr([c4317781/86h/1h/0h/1/0]1f0c6f9ded2359813cce076b53005a229b3d8a2caeb617a0adabf73b26f8391b)#6hch3ltl"
-
-echo $UTXOS|jq '.[9].address'
-=>
-"tb1pj56xf3utuyzkf687xhtj69cf8g6yh4pvee5k9d4g9y2hd4387fvqv22cju"
-```
-
-### アドレスを確認してUTXOを決定する
-
-* P2PKH のUTXO はこの例では インデックス 0
-
-```bash
+n3ExacD1dFiMLL37u4j5YsR1SBcqi7qCFA
+# P2PKHアドレスを確認
 echo $P2PKH_ADDR
 =>
 n3ExacD1dFiMLL37u4j5YsR1SBcqi7qCFA
-
-UTXO_P2PKH=`echo $UTXOS|jq '.[0]'`
-
-echo $UTXO_P2PKH
-=>
-{ "txid": "557adafc853f70a405a9e271ab4b5e8b308049ba18792361d2d82c0317271c33", "vout": 0, "address": "n3ExacD1dFiMLL37u4j5YsR1SBcqi7qCFA", "label": "pkh_user", "scriptPubKey": "76a914ee4c59a05db9e4f2449346061a064f90dd59239688ac", "amount": 0.00020000, "confirmations": 615, "spendable": true, "solvable": true, "desc": "pkh([c4317781/44h/1h/0h/0/2]02f892126df2459ca403ee963b92e3fe25355780d4192be8569e1a544553068fcf)#7udsu0qd", "parent_descs": [ "pkh(tpubD6NzVbkrYhZ4WMdAbdLz46exTnUp5Q3K7voVX1AZ26FqvuHfGfKZ6XdreuQzvhzoCCX4ayjsSx7xSXVaxn1pxr1qbix2SYYMLNxbgtifkMT/44h/1h/0h/0/*)#75tfa5h9" ], "safe": true }
+# 一致しているので インデックス0 がP2PKHのUTXO
 ```
 
-
-* P2WPKH のUTXOは この例では インデックス 8 
+* （この例では）インデックス 0 のUTXOをシェル変数 UTXO_P2PKH に代入
+  
+```bash
+UTXO_PKH=`echo $UTXOS|jq '.[0]'`
+```
 
 ```bash
+echo $UTXOS|jq '.[1].desc'
+=>
+"wpkh([c4317781/84h/1h/0h/0/31]035701c8785279c4ca4eb9e792428404e609b2f6a07f2b7e13b781c2d02c752def)#glp2qarz"
+# wpkh 発見！
+# アドレスを確認
+echo $UTXOS|jq '.[1].address'
+=>
+tb1q6zy2jxjry280wq64m2gvl9sfnvhvy4t3w05ljv
+# P2WPKHアドレスを確認
 echo $P2WPKH_ADDR
 =>
 tb1q6zy2jxjry280wq64m2gvl9sfnvhvy4t3w05ljv
-
-
-UTXO_WPKH=`echo $UTXOS|jq -r '.[8]'`
-
-echo $UTXO_WPKH
-=>
-{ "txid": "557adafc853f70a405a9e271ab4b5e8b308049ba18792361d2d82c0317271c33", "vout": 2, "address": "tb1q6zy2jxjry280wq64m2gvl9sfnvhvy4t3w05ljv", "label": "wpkh_user", "scriptPubKey": "0014d088a91a43228ef70355da90cf96099b2ec25571", "amount": 0.00020000, "confirmations": 615, "spendable": true, "solvable": true, "desc": "wpkh([c4317781/84h/1h/0h/0/24]032bd958132aaed2ea27cd8b1d3e31f4dba13543d3ef1bc9c55b6491934a4fd550)#d93g0dad", "parent_descs": [ "wpkh(tpubD6NzVbkrYhZ4WMdAbdLz46exTnUp5Q3K7voVX1AZ26FqvuHfGfKZ6XdreuQzvhzoCCX4ayjsSx7xSXVaxn1pxr1qbix2SYYMLNxbgtifkMT/84h/1h/0h/0/*)#w3yerj76" ], "safe": true }
+# 一致しているので，インデックス1 がP2WPKHのUTXO
 ```
 
-* P2TR のUTXOは この例では インデックス 9
+* （この例では）インデックス 1 のUTXOをシェル変数 UTXO_P2WPKH に代入
 
 ```bash
+UTXO_WPKH=`echo $UTXOS|jq '.[1]'`
+```
+
+...
+
+
+```bash
+echo $UTXOS|jq '.[3].desc'
+=>
+"tr([9d671bb2/86h/1h/0h/0/0]73f542100a640353f56b497534da7c2f1aabd06aa3ded48017d566a82083e67a)#9m5msrfm"
+# tr()発見！
+# アドレスを確認
+echo $UTXOS|jq '.[3].address'
+=>
+"tb1pn99nkklk2rdlnx7vsg8n9f90fjyyqyvfpeefn5efz56qr5c8hsns5yqwge"
 echo $P2TR_ADDR
 =>
-tb1prg0ygugk6wmqlmd5hvl46nywmmckqhu6eqdymttxt2tt8s238sqssm7krw
+"tb1pn99nkklk2rdlnx7vsg8n9f90fjyyqyvfpeefn5efz56qr5c8hsns5yqwge"
+# 一致しているので，インデックス3 がP2TRのUTXO
+```
 
+* （この例では）インデックス 3 のUTXOをシェル変数 UTXO_P2TR に代入
 
-UTXO_TR=`echo $UTXOS|jq '.[9]'`
-
-echo $UTXO_TR
-=>
-{ "txid": "963749a3ce3b770157c3b05c2b29715e0e5cf2a1e8e34aab5f39d5e6a7ae8737", "vout": 0, "address": "tb1pj56xf3utuyzkf687xhtj69cf8g6yh4pvee5k9d4g9y2hd4387fvqv22cju", "scriptPubKey": "5120953464c78be10564e8fe35d72d17093a344bd42cce6962b6a8291576d627f258", "amount": 0.00697768, "confirmations": 22, "spendable": true, "solvable": true, "desc": "tr([c4317781/86h/1h/0h/1/0]1f0c6f9ded2359813cce076b53005a229b3d8a2caeb617a0adabf73b26f8391b)#6hch3ltl", "parent_descs": [ "tr(tpubD6NzVbkrYhZ4WMdAbdLz46exTnUp5Q3K7voVX1AZ26FqvuHfGfKZ6XdreuQzvhzoCCX4ayjsSx7xSXVaxn1pxr1qbix2SYYMLNxbgtifkMT/86h/1h/0h/1/*)#0l0qwhcu" ], "safe": true }
+```bash
+UTXO_TR=`echo $UTXOS|jq '.[3]'`
 ```
 
 ## <a id="p2pkh">P2PKH </a>
 
 ### P2PKH タイプのUTXOの確認
-
 
 トランザクションIDとVOUT と金額の確認
 
@@ -345,7 +337,8 @@ OUTPUT_PKH="[{\"$TARO\": 0.00018}]"
 ```
 
 ```bash
-echo "$INPUT_PKH"
+echo $INPUT_PKH
+echo $OUTPUT_PKH
 ```
 
 未署名のトランザクション
