--- a/bitcoin/4.bitcoinrb.md
+++ b/bitcoin/4.bitcoinrb.md
@@ -1,6 +1,6 @@
 # 3. bitcoinrb
 
-2024/11/10
+2024/11/16
 Shigeichiro Yamasaki
 
 * bitcoin core API をRuby から操作する rubygems  ライブラリの基本操作
@@ -32,6 +32,7 @@ Ruby 3.3.6 を基本とします。
 
 ```bash
 sudo apt install -y libleveldb-dev
+sudo apt install -y g++
 gem update --system
 gem install bitcoinrb
 ```
