--- a/ethereum/3. payable.md
+++ b/ethereum/3. payable.md
@@ -48,7 +48,7 @@ contract EthWallet {
     }
 
     // コントラクトの残高を確認する関数
-    function getBalance() public returns (uint256) {
+    function getBalance() public view returns (uint256) {
         return address(this).balance;
     }
 }
