--- a/ethereum/3. payable.md
+++ b/ethereum/3. payable.md
@@ -1,6 +1,6 @@
 # 3. Eth を所有可能なコントラクトの作成
 
-2024/11/18
+2024/11/19
 Shigeichiro Yamasaki
 
 ## コントラクトアドレスへのEth 送金を可能にする方法
@@ -8,6 +8,22 @@ Shigeichiro Yamasaki
 1. コントラクトが ETH を受取可能にする（関数に payable修飾子をつける）
 2. 永久にETHを所有したままにしないために，コントラクトが所有する Eth を引き出し可能にしなければならない
  
+### hardhat プロジェクトの作成
+
+```bash
+cd ~/hardhat
+mkdir payable
+cd payable
+
+npm init
+npm install --save-dev hardhat
+npx hardhat init
+
+rm contracts/Lock.sol
+rm test/Lock.js
+rm ignition/modules/Lock.js
+
+```
 ### コントラクトのコードの作成
 
 * プロジェクトルートに移動して solidity プログラムを作成
@@ -80,37 +96,26 @@ module.exports = buildModule("EthWallet", (m) => {
 });
 ```
 
+### ローカルノードの起動
+
+```bash
+npx hardhat node
+```
+
 ### ローカルノードへのデプロイ
+
+```bash
+cd ~/hardhat/payable
+```
+
 
 ```bash
 npx hardhat ignition deploy ignition/modules/EthWallet.js --network localhost
 
 =>
-Batch #1
-  Executed EthWallet#EthWallet
+...
 
-[ EthWallet ] successfully deployed 🚀
-
-Deployed Addresses
-
-JPYcoin#JPYcoin - 0x5FbDB2315678afecb367f032d93F642f64180aa3
-EthWallet#EthWallet - 0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512
-```
-
-* ログの確認
-
-コントラクトアドレスを確認する
-
-```js
-Mined block #1
-  Block: 0x5fa6ea8f00f6a259c9abc4cf13c54590e3dc8b69a8b57ac6ca90a9ceff2fc2cd
-    Base fee: 875000000
-    Transaction:           0x25c5989fe41a0cee41a35b49700339a287da041490a29af6514157572de83fd9
-      Contract deployment: EthWallet
-      Contract address:    0x5fbdb2315678afecb367f032d93f642f64180aa3
-      From:                0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266
-      Value:               0 ETH
-      Gas used:            313341 of 313341
+EthWallet#EthWallet - 0x5FbDB2315678afecb367f032d93F642f64180aa3
 ```
 
 
