--- a/ethereum/3. payable.md
+++ b/ethereum/3. payable.md
@@ -122,7 +122,7 @@ EthWallet#EthWallet - 0x5FbDB2315678afecb367f032d93F642f64180aa3
 ### コンソールからの操作
 
 ```bash
-npx hardhat console
+npx hardhat console --network localhost
 ```
 
 * コントラクトへの接続
@@ -146,7 +146,7 @@ undefined
 
 ```js
 // EthWallet へ ETH を送金する (10000000 wei)
-> await owner.sendTransaction({to: EthWallet_addr, value: 10000000})
+> await owner.sendTransaction({to: EthWallet_addr, value: 10000000n});
 
 ```
 
