npm install -> yarn add

--- a/ethereum/1. Hardhat.md
+++ b/ethereum/1. Hardhat.md
@@ -2,7 +2,7 @@
 
 Ethereum の開発環境
 
-2024/11/18
+2024/11/19
 Shigeichiro Yamasaki
 
 * [環境のセットアップ](#setup)
@@ -22,14 +22,14 @@ Shigeichiro Yamasaki
 ```bash
 sudo apt update
 sudo apt upgrade -y
-sudo apt install curl git tree
+sudo apt install -y curl git tree
 curl https://raw.githubusercontent.com/creationix/nvm/master/install.sh | bash
 source ~/.profile
 
 nvm install --lts
+npm install -g yarn
 
 node -v
-
 =>
 v22.11.0
 ```
@@ -37,12 +37,6 @@ v22.11.0
 
 ```bash
 sudo snap install --classic code
-```
-
-* tree コマンドのインストール
-
-```bash
-sudo apt install tree
 ```
 
 ### MacOSX
@@ -56,9 +50,9 @@ echo 'source $(brew --prefix nvm)/nvm.sh' >> ~/.zprofile
 source ~/.zprofile
 
 nvm install --lts
+npm install -g yarn
 
 node -v
-
 =>
 v22.11.0
 ```
@@ -100,36 +94,18 @@ init コマンドでプロジェクトのフォルダ群を自動生成します
 
 また，このパスがプロジェクトの起点となる「プロジェクトルート」になります．
 
-とりあえず，入力なしでエンターキーを押していくだけでよいですが，実際にプロジェクトを作成するときは，それぞれの設定を入力してください．
-
 設定ファイルは，package.json というファイルです．
 
 ```bash
-npm init
-
-=>
-# 学習用ではデフォルトのまま <enterキー>
-# 実際にプロジェクトを構築するときは適切に設定してください
-...
-
-Is this OK? (yes) 
-npm notice
-npm notice New minor version of npm available! 10.8.2 -> 10.9.0
-npm notice Changelog: https://github.com/npm/cli/releases/tag/v10.9.0
-npm notice To update run: npm install -g npm@10.9.0
-npm notice
+npm init -y
 ```
 
 ### Hardhat パッケージモジュールのインストール
 
-hardhat は,javaScriptのパッケージモジュールです.
-
-★  --save-dev というオプションは，このプロジェクトだけのローカルな環境にモジュールをインストールするという意味です．
 
 ```bash
-npm install --save-dev hardhat
+yarn add --dev hardhat
 ```
-
 
 ### Hardhat の初期化
 
@@ -605,33 +581,8 @@ cd ~
 cd hardhat/tutorial
 ```
 
-### hardhat設定ファイル hardhat.config.js の修正
 
-* ネットワークを hardhat networkにする
-* チェインIDを 31337
-* マイニングの間隔を10秒に設定
 
-```bash
-nano hardhat.config.js
-```
-
-```js
-require("@nomicfoundation/hardhat-toolbox");
-
-/** @type import('hardhat/config').HardhatUserConfig */
-module.exports = {
-  solidity: "0.8.27",
-  networks: {
-    hardhat: {
-      chainId: 31337,
-      mining: {
-        auto: false,
-        interval: [10000, 11000]
-      }
-    },
-  },
-};
-```
 ### hardhat node の起動
 
 * 自分のマシンのローカル環境にテスト用の Ethereum Network Node を起動します
