--- a/ethereum/3. payable.md
+++ b/ethereum/3. payable.md
@@ -15,8 +15,8 @@ cd ~/hardhat
 mkdir payable
 cd payable
 
-npm init
-npm install --save-dev hardhat
+npm init -y
+yarn add --dev hardhat
 npx hardhat init
 
 rm contracts/Lock.sol
