--- a/ethereum/4. ERC20.md
+++ b/ethereum/4. ERC20.md
@@ -1,6 +1,6 @@
 # 4. ERC20 トークンの作成と利用
 
-2024/11/19
+2024/11/26
 Shigeichiro Yamasaki
 
 OpenZeppelin のライブラリを利用した ERC20トークンを処理するコントラクト
@@ -87,9 +87,7 @@ cd erc20
 npm init -y
 yarn add --dev hardhat
 npx hardhat init
-```
 
-```bash
 rm contracts/Lock.sol
 rm test/Lock.js
 rm ignition/modules/Lock.js
@@ -254,19 +252,6 @@ npx hardhat console --network localhost
 > await JPYcoin.approve(addr1, 1000)
 ```
 
-* addr1 に承認された owner のトークンの引き出し可能金額
-
-```js
-> await JPYcoin.allowance(owner, addr1)
-1000n
-```
-
-* addr1 が owner の代理で addr2 にトークンを送金する
-
-```js
-> await JPYcoin.transferFrom(addr1,addr2,100)
-
-```
 
 ## メタマスク
 
@@ -385,6 +370,7 @@ module.exports = buildModule("JPYFaucet", (m) => {
 npx hardhat ignition deploy ignition/modules/JPYFaucet.js --network localhost
 
 =>
+...
 Batch #1
   Executed JPYFaucet#JPYFaucet
 
@@ -393,31 +379,41 @@ Batch #1
 Deployed Addresses
 
 JPYcoin#JPYcoin - 0x5FbDB2315678afecb367f032d93F642f64180aa3
-JPYFaucet#JPYFaucet - 0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512
+JPYFaucet#JPYFaucet - 0xCf7Ed3AccA5a467e9e704C703E8D87F634fB0Fc9
 ```
 
 ### コンソールからの操作
 
-* ERC20コントラクトとトークン購入コントラクトのインスタンスとの接続
+* ERC20コントラクトへのコンソール操作の続き
 
 ```bash
-npx hardhat console
+npx hardhat console --network localhost 
 ```
 
 ```js
-> const JPYcoinAddr = "0x5FbDB2315678afecb367f032d93F642f64180aa3"
-> const JPYcoinFactory = await ethers.getContractFactory("JPYcoin")
-> const JPQ = await JPYcoinFactory.attach(JPYcoinAddr)
+// JPYFaucet
+> const JPYFaucet_addr = "0xCf7Ed3AccA5a467e9e704C703E8D87F634fB0Fc9"
+> const JPYFaucet_Factory = await ethers.getContractFactory("JPYFaucet")
+> const JPYFaucet = await JPYFaucet_Factory.attach(JPYFaucet_addr)
+```
 
-> const JPYFaucetAddr = "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512"
-> const JPYFaucetFactory = await ethers.getContractFactory("JPYFaucet")
-> const JPYF = await JPYFaucetFactory.attach(JPYFaucetAddr)
+```js
+// JPYcoin
+> const JPYcoin_addr = "0x5FbDB2315678afecb367f032d93F642f64180aa3"
+> const JPYcoin_Factory = await ethers.getContractFactory("JPYcoin")
+> const JPYcoin = await JPYcoin_Factory.attach(JPYcoin_addr)
+```
+
+* JPYcoin をトークンとして設定する
+
+```js
+> await JPYFaucet.setToken(JPYcoin);
 ```
 
 * ERC20コントラクトからトークン購入コントラクトに対して代理送金を許可する（1000000000トークンまで）
 
 ```js
-> await JPQ.approve(JPYFaucet,1000000000);
+> await JPYcoin.approve(JPYFaucet,1000000000);
 
 ```
 
@@ -430,16 +426,16 @@ npx hardhat console
 * トークン購入 (ETH を 20000 wei) 送金
 
 ```js
-> await JPYF.buyTokens({value: 20000})
+> await JPYFaucet.buyTokens({value: 20000})
 
 ```
 
 * トークン保有量の確認
 
 ```js
-> await JPQ.balanceOf(addr1.address)
+> await JPYcoin.balanceOf(addr1.address)
 8000000n
-> await JPQ.balanceOf(owner.address)
+> await JPYcoin.balanceOf(owner.address)
 99992000000n
 
 ```
