--- a/ethereum/3. payable.md
+++ b/ethereum/3. payable.md
@@ -1,6 +1,6 @@
 # 3. Eth を所有可能なコントラクトの作成
 
-2024/11/19
+2024/11/26
 Shigeichiro Yamasaki
 
 ## コントラクトアドレスへのEth 送金を可能にする方法
@@ -129,11 +129,8 @@ npx hardhat console --network localhost
 
 ```js
 > const EthWallet_addr = "0x5FbDB2315678afecb367f032d93F642f64180aa3"
-undefined
 > const EthWallet_Factory = await ethers.getContractFactory("EthWallet")
-undefined
 > const EthWallet =  await EthWallet_Factory.attach(EthWallet_addr)
-undefined
 ```
 
 * テスト用アカウント
@@ -158,15 +155,8 @@ undefined
 10000000n
 
 
-// コントラクトの所持金を引き出す
+// コントラクトの所持金を 100000 ETH 引き出す
 > await EthWallet.withdraw(100000)
-
-=>
-ContractTransactionResponse {
-  provider: HardhatEthersProvider {
-
-...
-}
 
 > await EthWallet.getBalance()
 9900000n
@@ -176,13 +166,6 @@ ContractTransactionResponse {
 
 ```js
 > await EthWallet.deposit({value: 30000});
-
-=>
-ContractTransactionResponse {
-  provider: HardhatEthersProvider {
-
-...
- }
 
 > await EthWallet.getBalance()
 9930000n
