--- a/ethereum/6. ethers.js.md
+++ b/ethereum/6. ethers.js.md
@@ -1,8 +1,9 @@
-# 5. ethers.js 入門
+# 6. ethers.js 入門
 
 ethereum RPC の ラッピングクライアントの使い方
 
-最終更新 2024/11/01  Shigeichiro Yamasaki
+2024/11/26
+Shigeichiro Yamasaki
 
 ## 前提条件
 
